--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
     datasource:
-        url: ${DB_URL}
-        username: ${USERNAME}
-        password: ${PASSWORD}
+        url: jdbc:mysql://localhost:3306/gestion-tickets
+        username: root
+        password: root
     jpa:
         show_sql: true
         hibernate:
