--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
             ddl-auto: update
         properties:
             dialect: org.hibernate.dialect.MySQL5Dialect
+        defer-datasource-initialization: true
     thymeleaf:
         cache: false
 logging:
