--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,34 @@
 spring:
-    datasource:
-        url: jdbc:mysql://localhost:3306/gestion-tickets
-        username: root
-        password: root123456
-    jpa:
-        show_sql: true
-        hibernate:
-            ddl-auto: update
-        properties:
-            dialect: org.hibernate.dialect.MySQL5Dialect
-        defer-datasource-initialization: true
-    thymeleaf:
-        cache: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/gestion-tickets
+    username: root
+    password: root
+  jpa:
+    show_sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      dialect: org.hibernate.dialect.MySQL5Dialect
+    defer-datasource-initialization: true
+  thymeleaf:
+    cache: false
+  # --- Configuración de Mail Sender ---
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL_USERNAME}
+    password: ${EMAIL_PASSWORD} 
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            trust: smtp.gmail.com 
+
 logging:
-    level:
-        org:
-            springframework:
-                security: DEBUG
+  level:
+    org:
+      springframework:
+        security: DEBUG
